# game-sample

./: .gitmodules  CMakeLists.txt  README.md
src/main/cpp/: main.cpp  sample.cpp
src/main/cpp/common/: Animation.h  shader.h
src/main/cpp/common/impl/: shader.cpp
src/main/cpp/graphic/: GraphicProvider.h
src/main/cpp/graphic/opengl/: OpenGLGraphicProvider.cpp
src/main/cpp/model/: Camera.h  FrameData.h  GameObject.h  GameState.h  GraphicMetaData.h  Input.h  model.cpp
src/main/glsl/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
